# MCP

./: .gitignore  README.md  main.py  pyproject.toml  vercel.json
db/: db_setup.py  legal_database_sample.sql
documents/: Sample_Legal_Contract.docx
main/: app.py
main/routes/: query_routes.py  routes.py
main/service/: agent.py  captioning.py  database_service.py  handoff_service.py  image_extraction.py  mcp_client.py  metadata.py  query_service.py  rag_service.py  semantic_chunking.py  sql_database.py  table_extraction.py  table_processing.py  tools.py
